Movie Clip Editor: Prefetching frames doesn't work if an image-sequence or its directory contains certain characters. Swedish åäö for example. #37117

Closed
opened 2013-10-17 00:37:29 +02:00 by Lars Soderlind · 3 comments

%%%--- Operating System, Graphics card ---

Windows7 64bit

- Blender version with error, and version that worked ---

Error: blender-2.69-RC2-windows64

- Short description of error ---

Prefetching frames doesn't work if an image-sequence or its directory contains certain characters. I have tested the characters å ä ö and also others like ü é ñ. All of them show the error. Special characters like ! $ and & seems to work ok. This only seems to happen with image-sequences, avi files in the same directory work fine.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Create a directory with any of the characters mentioned above in its name. Take ö for example. (That is an o with two dots above it). You should be able to write it by holding alt while typing 148 on the numerical keyboard.
Place an image-sequence in it.
Open blender.
Choose Motion Tracking layout.
Open the image-sequence.
Press P or click the "prefetch frames" button and nothing happens.

%%%

%%%--- Operating System, Graphics card --- Windows7 64bit - Blender version with error, and version that worked --- Error: blender-2.69-RC2-windows64 - Short description of error --- Prefetching frames doesn't work if an image-sequence or its directory contains certain characters. I have tested the characters å ä ö and also others like ü é ñ. All of them show the error. Special characters like ! $ and & seems to work ok. This only seems to happen with image-sequences, avi files in the same directory work fine. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Create a directory with any of the characters mentioned above in its name. Take ö for example. (That is an o with two dots above it). You should be able to write it by holding alt while typing 148 on the numerical keyboard. Place an image-sequence in it. Open blender. Choose Motion Tracking layout. Open the image-sequence. Press P or click the "prefetch frames" button and nothing happens. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in svn rev60819. Thanks for the report, closing.%%%

%%%Fixed in svn rev60819. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37117
No description provided.