Fix #37117: MCE prefetching fails with non-ascii characters in path